temp fix for overlapping annotations (not great)

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -11,6 +11,7 @@
     font-size: .8rem !important;
     vertical-align: baseline;
     position: relative;
+    padding: 50px 5px;
 z-index:0;
 font-size: smaller;
 cursor: pointer;
